--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./favicon.ico" />
     <script type="module" src="./js/index.js"></script>
     <link rel="stylesheet" type="text/css" href="./css/styles.css" />
     <title>1DV601 - L1</title>
